--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
+    "tailwind-merge": "^2.2.1",
     "use-count-up": "^3.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.1"
